--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -61,6 +61,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
+    if: ${{ !canceled() }}
     steps:
       - uses: actions/checkout@v3
       - name: Build docker container
