--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -61,7 +61,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
-    if: ${{ !canceled() }}
+    if: ${{ !cancelled() }}
     steps:
       - uses: actions/checkout@v3
       - name: Build docker container
