--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -52,7 +52,7 @@ jobs:
           npm audit > audit-report
           cat audit-report
       - name: PR comment with file
-        if: github.event_name == 'pull_request'
+        if: ${{ github.event_name == 'pull_request' && always() }} 
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: ./audit-report
