--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -64,6 +64,16 @@ jobs:
     if: ${{ !cancelled() }}
     steps:
       - uses: actions/checkout@v3
+      - name: Login to Github Registry
+        uses: docker/login-actions@v1
+        with:
+          registry: ghcr.io
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build docker container
-        run: docker build -t dummy-app:1.0 .
+        run: docker build -t ghcr.io/${{ env.DOCKER_USER }}/dummy-app:1.0 .
+      - name: Push docker container
+        run: docker push ghcr.io/${{ env.DOCKER_USER }}/dummy-app:1.0
+    env:
+      DOCKER_USER: ${{ github.actor }}
     needs: [ audit, test]
