--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -60,8 +60,11 @@ jobs:
     needs: verify-install
   
   build:
-    runs-on: ubuntu-latest
     if: ${{ !cancelled() }}
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
       - uses: actions/checkout@v3
       - name: Login to Github Registry
