--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -68,7 +68,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Login to Github Registry
-        uses: docker/login-actions@v1
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ env.DOCKER_USER }}
