--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -30,6 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: 14
+          cache: npm
       - name: Install npm packages 
         run: npm ci
       - name: Audit npm packages
@@ -45,6 +49,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: 14
+          cache: npm
       - name: Install npm packages 
         run: npm ci
       - name: Audit npm packages 
