--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -82,7 +82,7 @@ jobs:
           username: ${{ env.DOCKER_USER }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set owner name to lowercase
-        run: echo "LC_DOCKER_USER=${{ env.DOCKER_USER,,}}" >> ${GITHUB_ENV}
+        run: echo "LC_DOCKER_USER=${DOCKER_USER,,}" >> ${GITHUB_ENV}
       - name: Build docker container
         run: docker build -t ghcr.io/${LC_DOCKER_USER}/${GITHUB_REPOSITORY#*/}/dummy-app:1.0 .
       - name: Push docker container
