--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -59,6 +59,11 @@ jobs:
         run: |
           npm audit > audit-report
           cat audit-report
+      - name: Upload audit results
+        uses: actions/upload-artifact@v4.3.1
+        with:
+          name: audit-report
+          path: audit-report
       - name: PR comment with file
         if: ${{ github.event_name == 'pull_request' && always() }} 
         uses: thollander/actions-comment-pull-request@v2
