--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -42,50 +42,11 @@ jobs:
     needs: verify-install
   
   audit:
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write    
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4.0.2
-        with:
-          node-version: 14
-          cache: npm
-      - name: Install npm packages 
-        run: npm ci
-      - name: Audit npm packages 
-        run: |
-          npm audit > audit-report
-          cat audit-report
-        continue-on-error: true
-      - name: Upload audit results
-        uses: actions/upload-artifact@v4.3.1
-        with:
-          name: audit-report
-          path: ./audit-report
+    uses: ./.github/workflows/audit.yml
     needs: verify-install
-
-  report-audit:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download report
-        uses: actions/download-artifact@v4.1.4
-        with:
-          name: audit-report
-      - name: Show report
-        run: cat audit-report
-      - name: PR comment with file
-        if: ${{ github.event_name == 'pull_request' && always() }} 
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          filePath: ./audit-report
-          comment_tag: execution
-    needs: audit
   
   build:
-    #if: ${{ !cancelled() }}
+    if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
     permissions:
       packages: write
