:construction_worker: Adding audit workflow

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -42,6 +42,9 @@ jobs:
     needs: verify-install
   
   audit:
+    permissions:
+      issues: write
+      pull-requests: write
     uses: ./.github/workflows/audit.yml
     needs: verify-install
   
