--- a/.github/actions/audit-summary/action.yml
+++ b/.github/actions/audit-summary/action.yml
@@ -2,7 +2,7 @@ name: 'Audit summarizer'
 description: 'This action takes the npm audit report and calls to action if needed summarizing the report'
 inputs:
   audit-report:
-    description: 'The npm audit output'
+    description: 'The npm audit output file'
     required: true
 outputs:
   audit-summary:
